--- a/BaiTap/BaiTapBuoi8/BaiTapBuoi8.csproj
+++ b/BaiTap/BaiTapBuoi8/BaiTapBuoi8.csproj
@@ -40,18 +40,18 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Employee\Employee.cs" />
+        <Compile Include="Employee\FullTime_Employee.cs" />
+        <Compile Include="Employee\PartTime_Employee.cs" />
+        <Compile Include="Geometry\Circle.cs" />
+        <Compile Include="Geometry\Geometry.cs" />
+        <Compile Include="Geometry\Rectangle.cs" />
+        <Compile Include="Product\Book.cs" />
+        <Compile Include="Product\Laptop.cs" />
+        <Compile Include="Product\Phone.cs" />
+        <Compile Include="Product\Product.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="Properties\Employee\Employee.cs" />
-        <Compile Include="Properties\Employee\FullTime_Employee.cs" />
-        <Compile Include="Properties\Employee\PartTime_Employee.cs" />
-        <Compile Include="Properties\Geometry\Circle.cs" />
-        <Compile Include="Properties\Geometry\Geometry.cs" />
-        <Compile Include="Properties\Geometry\Rectangle.cs" />
-        <Compile Include="Properties\Product\Book.cs" />
-        <Compile Include="Properties\Product\Laptop.cs" />
-        <Compile Include="Properties\Product\Phone.cs" />
-        <Compile Include="Properties\Product\Product.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
